# vrolen

./: .env.example  .gitignore  .prettierignore  AUDIT-DATA-FLOW.md  AUDIT-ENGINE-MATH.md  AUDIT-PRODUCTION-FITNESS.md  BENCHMARKS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
engine-rs/: Cargo.toml
engine-rs/src/: lib.rs
public/: manifest.webmanifest  sw.js
public/sprites/: manifest.json
scripts/: bench-playback.ts  bench-scheduler.ts  build-sprite-atlas.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx  smoke.test.ts  smoke.test.tsx  test-setup.ts  vite-env.d.ts
src/ai/: adapter-factory.test.ts  adapter-factory.ts  clarification-schema.ts  gemini-adapter.test.ts  gemini-adapter.ts  index.ts  mock-adapter.test.ts  mock-adapter.ts  narration.test.ts  narration.ts  openai-adapter.test.ts  openai-adapter.ts  openai-shape.test.ts  openai-shape.ts  provider-keys.test.ts  provider-keys.ts  query.test.ts  query.ts  scenario-prompt.ts  scenario-schema.test.ts  scenario-schema.ts  scenario-tool-clarify.test.ts  scenario-tool.test.ts  scenario-tool.ts  shared-openai.ts  types.ts  usage.test.ts  usage.ts
src/components/: AppShell.tsx  EmptyState.test.tsx  EmptyState.tsx  RouteAnnouncer.tsx  Skeleton.test.tsx  Skeleton.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toaster.tsx  global-command-palette.tsx  industrial-icons.tsx
src/config/: env.ts
src/engine/: audit-math.audit.test.ts  batch-fire.test.ts  bottleneck.test.ts  bottleneck.ts  breakdown.test.ts  breakdown.ts  buffer.test.ts  buffer.ts  chain-harness.test.ts  chain-harness.ts  conveyor-chain.test.ts  conveyor-fanout.test.ts  (+45 more)
src/engine-rs/: index.test.ts  index.ts
(+319 files in other folders)
